--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,3 +1,11 @@
 @import "./config.scss";
 @import "./normalize.scss";
-@import "./elementui.scss"
+@import "./elementui.scss";
+
+.pull_left {
+    float: left;
+}
+
+.pull_right {
+    float: right;
+}
