--- a/src/assets/styles/elementui.scss
+++ b/src/assets/styles/elementui.scss
@@ -1,3 +1,7 @@
+.el-menu {
+    border: none;
+}
+
 .el-submenu .el-menu-item {
     font-size: 14px;
     padding-left: 50px !important;
@@ -10,6 +14,34 @@
 //修改一级菜单样式
 li.el-submenu {
     &.is-active.is-opened .el-submenu__title {
+        background-color: $mainColor !important;
+    }
+}
+
+.close {
+    .el-submenu {
+        &.is-opened {
+            >.el-submenu__title {
+                background-color: $mainColor !important;
+            }
+        }
+    }
+}
+
+.el-menu--vertical {
+    .el-menu--popup {
+        padding: 0;
+    }
+
+    .el-menu {
+        background-color: $navColor !important;
+    }
+
+    .el-menu-item {
+        line-height: 56px;
+    }
+
+    .el-menu-item:hover {
         background-color: $mainColor !important;
     }
 }
