element-ui组件:table,dialog,message组件封装；信息列表静态页面完成；全局注册方法

--- a/src/assets/styles/config.scss
+++ b/src/assets/styles/config.scss
@@ -16,3 +16,16 @@ $navColor:#344a5f;
     -ms-#{$type}: $value;
     #{$type}: $value;
 }
+
+@mixin labelDom($align, $width, $line-height:"normal") {
+    label {
+        float: left;
+        line-height: $line-height + px;
+        width: $width + px;
+        text-align: $align;
+    }
+
+    .wrap_content {
+        margin-left: $width + px;;
+    }
+}
